<resources>
    <string name="app_name">Mingle</string>
    <string name="aciklama">Anıları Kolay ve Zahmetsizce Saklamanın Yolu</string>
    <string name="anilarim_aciklama">Anılarınızla ilgili açıklama, fotoğraf, konum ve tarih ekleyebilirsiniz.</string>
    <string name="gezdigim_yerler_aciklama">Gezdiğiniz yerlerle ilgili açıklama, fotoğraf, konum ve tarih ekleyebilirsiniz.</string>
    <string name="okudugum_kitaplar_aciklama">Okuduğunuz kitaplarla ilgili açıklama, fotoğraf ve tarih ekleyebilirsiniz.</string>
    <string name="izledigim_fimler_aciklama">İzlediğiniz filmlerle ilgili açıklama, fotoğraf ve tarih ekleyebilirsiniz.</string>
</resources>